--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
         </div>
         <div id="coin-input" class="coin-input">
             <h2>Insert Coins</h2>
-            <label>Quarters: <input type="number" id="quarters" value="0"></label>
-            <label>Dimes: <input type="number" id="dimes" value="0"></label>
-            <label>Nickels: <input type="number" id="nickels" value="0"></label>
-            <label>Pennies: <input type="number" id="pennies" value="0"></label>
+            <label>Quarters: <input type="number" id="quarters"></label>
+            <label>Dimes: <input type="number" id="dimes"></label>
+            <label>Nickels: <input type="number" id="nickels"></label>
+            <label>Pennies: <input type="number" id="pennies"></label>
             <button onclick="processOrder()">Submit</button>
         </div>
         <div id="message" class="message"></div>
+        <div id="another-cup" class="another-cup"></div>
     </div>
     <script src="script.js"></script>
 </body>
